Now clicking form submit opens a result page

--- a/SurveyPage/view/frontend/templates/form.phtml
+++ b/SurveyPage/view/frontend/templates/form.phtml
@@ -1,3 +1,4 @@
-<form class="form" action="result" method="post">
-    <div>My Form</div>
+<form class="form" action="/survey/index/result" method="post">
+    <div><input type="text" name="message"></div>
+    <div><input type="submit"></div>
 </form>
