--- a/SurveyPage/view/frontend/templates/result.phtml
+++ b/SurveyPage/view/frontend/templates/result.phtml
@@ -1,1 +1,5 @@
-<div>Jee!</div>
+<?php /** @var Survey\SurveyPage\Block\AnswerTemplate $block */ ?>
+<?php foreach($block->getAnswers() as $answer): ?>
+    <?php /** @var Survey\SurveyPage\Model\Answer */ ?>
+    <p><?php echo $answer->getMessage(); ?></p>
+<?php endforeach; ?>
